主要功能全部实现